--- a/5.3-Bootstraps.vs.randomization/lesson.yaml
+++ b/5.3-Bootstraps.vs.randomization/lesson.yaml
@@ -12,10 +12,10 @@
   FigureType: new
 
 - Class: cmd_question
-  Output: Superficially, bootstrap and randomization distributions look quite similar, but it is important to know how they differ. Let's take a look at our Randomization Distribution from the last section to look at some of its features - histogram(~diffmean, data=RandDist)
-  CorrectAnswer: histogram(~diffmean, data=RandDist)
-  AnswerTests: omnitest(correctExpr='histogram(~diffmean, data=RandDist)')
-  Hint: Enter - histogram(~diffmean, data=RandDist)
+  Output: Superficially, bootstrap and randomization distributions look quite similar, but it is important to know how they differ. Let's take a look at our Randomization Distribution from the last section to look at some of its features - gf_histogram(~diffmean, data=RandDist)
+  CorrectAnswer: gf_histogram(~diffmean, data=RandDist)
+  AnswerTests: omnitest(correctExpr='gf_histogram(~diffmean, data=RandDist)')
+  Hint: Enter - gf_histogram(~diffmean, data=RandDist)
 
 - Class: mult_question
   Output: One of the most important things to notice about the Randomization Distribution is where it is centered. On what value is this distribution centered?
@@ -40,10 +40,10 @@
   FigureType: new
 
 - Class: cmd_question
-  Output: I've loaded in the bootstrap distribution you made for pre-lab 4, of the mean tap rate for the Caffeine group. Let's take a look at this distribution using a histogram - the dataframe is called CaffBoot and the variable we are interested in is labeled "mean" - so, histogram(~mean, data=CaffBoot).
-  CorrectAnswer: histogram(~mean, data=CaffBoot)
-  AnswerTests: omnitest(correctExpr='histogram(~mean, data=CaffBoot)')
-  Hint: We want to plot the mean values inside the data fram CaffBoot. Try using the histogram() function in a very similar fashion to the randomization distribution we plotted above. 
+  Output: I've loaded in the bootstrap distribution you made for pre-lab 4, of the mean tap rate for the Caffeine group. Let's take a look at this distribution using a histogram - the dataframe is called CaffBoot and the variable we are interested in is labeled "mean" - so, gf_histogram(~mean, data=CaffBoot).
+  CorrectAnswer: gf_histogram(~mean, data=CaffBoot)
+  AnswerTests: omnitest(correctExpr='gf_histogram(~mean, data=CaffBoot)')
+  Hint: We want to plot the mean values inside the data fram CaffBoot. Try using the gf_histogram() function in a very similar fashion to the randomization distribution we plotted above. 
 
 - Class: mult_question
   Output: On what value is this distribution centered?
@@ -81,7 +81,7 @@
   
 - Class: mult_question
   Output: Good work! You've completed Pre-Lab 5.3. Please select "Finished!". This will allow you to submit the log of this lesson to Google Forms so that I can give you credit for the pre-lab assignment. Make sure to fill in your email or X500 on the Google form and click submit!
-  AnswerChoices: Finished !
+  AnswerChoices: Finished!
   CorrectAnswer: NULL
   AnswerTests: submit_log()
   Hint: hint   
