--- a/2.3-Quantitative.variable.plots/lesson.yaml
+++ b/2.3-Quantitative.variable.plots/lesson.yaml
@@ -44,22 +44,22 @@
   Hint: Again, we're looking for the peak of the data!
 
 - Class: cmd_question
-  Output: Just like with the categorical plots, we can create a multi-panel plot using  "|" with a second categorical variable. This time, we'll explore how the distribution of the number of piercings differs between Males and Females. Try it out now - gf_density(~Piercings|Gender, data=StudentSurvey)
-  CorrectAnswer: gf_density(~Piercings |Gender, data=StudentSurvey)
-  AnswerTests: omnitest(correctExpr='gf_density(~Piercings |Gender, data=StudentSurvey)')
-  Hint: Remember to use the ~ in front of Piercings! Try it - gf_density(~Piercings |Gender, data=StudentSurvey)
+  Output: Just like with the categorical plots, we can create a multi-panel plot using  "|" with a second categorical variable. This time, we'll explore how the distribution of the number of piercings differs between smokers and non-smokers. Try it out now - gf_density(~Piercings | Smoke, data=StudentSurvey)
+  CorrectAnswer: gf_density(~Piercings | Smoke, data=StudentSurvey)
+  AnswerTests: omnitest(correctExpr='gf_density(~Piercings | Smoke, data=StudentSurvey)')
+  Hint: Remember to use the ~ in front of Piercings! Try it - gf_density(~Piercings | Smoke, data=StudentSurvey)
 
 - Class: cmd_question
-  Output: Although this plot looks OK, it would be easier to compare the two groups if the distributions were overlayed within the same graph. We can do this using the fill argument. Try it out now -  gf_density(~Piercings, fill=~Gender, data=StudentSurvey)
-  CorrectAnswer:  gf_density(~Piercings, fill=~Gender, data=StudentSurvey)
-  AnswerTests: omnitest(correctExpr=' gf_density(~Piercings, fill=~Gender, data=StudentSurvey)')
-  Hint: Remember to use the ~ in front of Piercings and also Gender! Try it -  gf_density(~Piercings, fill=~Gender, data=StudentSurvey)
+  Output: This plot looks a little strange since the number of piercings can only take on integer values (e.g., 0, 1, 2, ...). In addition, it would be easier to compare the two groups if the distributions were overlayed within the same graph. We can do this using the fill argument. Try it out now -  gf_density(~Piercings, fill=~Smoke, data=StudentSurvey)
+  CorrectAnswer:  gf_density(~Piercings, fill=~Smoke, data=StudentSurvey)
+  AnswerTests: omnitest(correctExpr=' gf_density(~Piercings, fill=~Smoke, data=StudentSurvey)')
+  Hint: Remember to use the ~ in front of Piercings and also Smoke! Try it -  gf_density(~Piercings, fill=~Smoke, data=StudentSurvey)
 
 - Class: exact_question
-  Output: Looking at our density plot, what number of piercings is most common for Females?
+  Output: Looking at our density plot, what number of piercings is most common for non-smokers? Well, the answer is 0. But, what is the most common number of piercings for non-smokers with at least 1 piercing? 
   CorrectAnswer: 2
   AnswerTests: omnitest(correctVal=2)
-  Hint: Look at the legend! Since R has automatically assigned colors, the pink line denotes males and the blue line denotes females. R clearly doesn't subscribe to gender norms!
+  Hint: Look at the legend! Since R has automatically assigned colors, the pink density denotes non-smokers and the blue line denotes smokers. The number you report should be an integer (1, 2, 3, 4,...).
 
   
 - Class: mult_question
